styling adjustments for thoroughly corrupted

--- a/css/symbaroum-dnd5e-mod.css
+++ b/css/symbaroum-dnd5e-mod.css
@@ -61,6 +61,11 @@
   background-color: #fff;
 }
 
+.syb5e.sheet.actor .dnd5e-border {
+  border: 2px groove #eeede0;
+  border-radius: 4px;
+}
+
 /* End Character/NPC Sheet Styling  */
 /* ************************ */
 
