--- a/templates/actors/syb5e-limited-sheet.html
+++ b/templates/actors/syb5e-limited-sheet.html
@@ -14,7 +14,7 @@
     {{!-- Sheet Body --}}
     <section class="sheet-body">
         <div class="tab biography">
-            {{editor content=data.details.biography.value target="data.details.biography.value" button=true owner=owner editable=editable rollData=rollData}}
+            {{editor content=system.details.biography.value target="system.details.biography.value" button=true owner=owner editable=editable rollData=rollData}}
         </div>
     </section>
 </form>
