--- a/templates/actors/syb5e-npc-sheet.html
+++ b/templates/actors/syb5e-npc-sheet.html
@@ -132,18 +132,18 @@
 
             {{!-- Skills --}}
             <ul class="skills-list">
-            {{#each config.skills as |label s|}}
+            {{#each config.skills as |skillData s|}}
             {{#with (lookup ../system.skills s) as |skill|}}
                 <li class="skill flexrow {{#if skill.value}}proficient{{/if}}" data-skill="{{s}}">
                     <input type="hidden" name="system.skills.{{s}}.value" value="{{skill.baseValue}}" data-dtype="Number"/>
                     <a class="proficiency-toggle skill-proficiency" title="{{skill.hover}}">{{{skill.icon}}}</a>
                     <div class="skill-name-controls">
-                      <h4 class="skill-name rollable">{{label}}</h4>
+                      <h4 class="skill-name rollable">{{skillData.label}}</h4>
                       <a class="config-button" data-action="skill" title="{{localize 'DND5E.SkillConfigure'}}"><i class="fas fa-cog"></i></a>
                     </div>
                     <span class="skill-ability">{{skill.ability}}</span>
-                    <span class="skill-mod" title="{{ localize 'DND5E.SkillModifierHint' skill=label }}">{{numberFormat skill.total decimals=0 sign=true}}</span>
-                    <span class="skill-passive" title="{{ localize 'DND5E.SkillPassiveHint' skill=label }}">({{skill.passive}})</span>
+                    <span class="skill-mod" title="{{ localize 'DND5E.SkillModifierHint' skill=skillData.label }}">{{numberFormat skill.total decimals=0 sign=true}}</span>
+                    <span class="skill-passive" title="{{ localize 'DND5E.SkillPassiveHint' skill=skillData.label }}">({{skill.passive}})</span>
                 </li>
             {{/with}}
             {{/each}}
