fixed corruption ability dropdown

--- a/templates/actors/parts/actor-corruption.html
+++ b/templates/actors/parts/actor-corruption.html
@@ -35,6 +35,7 @@
 {{/inline}}
 
 {{!-- TODO cement CSS --}}
+{{log this}}
 <ul class="attributes flexrow">
   {{#unless corruptionAbilities.thorough }}
   <li class="attribute resource" style="height:auto;">
