--- a/templates/actors/syb5e-limited-sheet.html
+++ b/templates/actors/syb5e-limited-sheet.html
@@ -2,7 +2,7 @@
 
     {{!-- Sheet Header --}}
     <header class="sheet-header flexrow">
-        <img class="profile" src="{{actor.img}}" title="{{actor.name}}" data-edit="img"/>
+        <img class="profile" src="{{actor.img}}" data-tooltip="{{actor.name}}" data-edit="img"/>
 
         <section class="header-details flexrow">
             <h1 class="charname">
@@ -14,7 +14,7 @@
     {{!-- Sheet Body --}}
     <section class="sheet-body">
         <div class="tab biography">
-            {{editor content=system.details.biography.value target="system.details.biography.value" button=true owner=owner editable=editable rollData=rollData}}
+            {{editor enrichedBio target="system.details.biography.value" button=true editable=editable}}
         </div>
     </section>
 </form>
