--- a/templates/actors/syb5e-character-sheet.html
+++ b/templates/actors/syb5e-character-sheet.html
@@ -31,21 +31,21 @@
 
             {{!-- Character Summary --}}
             <ul class="summary flexrow">
-                <li>
-                    <input type="text" name="system.details.race" value="{{system.details.race}}" placeholder="{{ localize 'SYB5E.Sheet.Origin' }}"/>
+                <li class="race">
+                    {{#if system.details.race.name}}
+                        <span data-tooltip="DND5E.Race">{{system.details.race.name}}</span>
+                    {{else}}
+                        <input type="text" name="system.details.race" value="{{system.details.race}}"
+                               placeholder="{{ localize 'SYB5E.Sheet.Origin' }}">
+                    {{/if}}
                 </li>
-                <li>
-                    {{#if labels.background}}
-                        <span data-tooltip="DND5E.Background">{{labels.background}}</span>
+                <li class="background">
+                    {{#if system.details.background.name}}
+                        <span data-tooltip="DND5E.Background">{{system.details.background.name}}</span>
                     {{else}}
                         <input type="text" name="system.details.background" value="{{system.details.background}}" placeholder="{{ localize 'DND5E.Background' }}"/>
                     {{/if}}
                 </li>
-                <!--
-                <li>
-                    <input type="text" name="system.details.alignment" value="{{system.details.alignment}}" placeholder="{{ localize 'DND5E.Alignment' }}"/>
-                </li>
-                -->
                 <li class="proficiency">
                     <span>{{ localize "DND5E.Proficiency" }} {{labels.proficiency}}</span>
                 </li>
@@ -55,7 +55,7 @@
             <ul class="attributes flexrow">
                 <li class="attribute health">
                     <h4 class="attribute-name box-title">{{localize "DND5E.HitPoints"}}</h4>
-                    <a class="config-button" data-action="hit-points" data-tooltip="DND5E.HitPointsConfig">
+                    <a class="config-button" data-action="hitPoints" data-tooltip="DND5E.HitPointsConfig">
                         <i class="fas fa-cog"></i>
                     </a>
                     <div class="attribute-value multiple">
@@ -78,7 +78,7 @@
 
                 <li class="attribute hit-dice">
                     <h4 class="attribute-name box-title">{{ localize "DND5E.HitDice" }}</h4>
-                    <a class="config-button" data-action="hit-dice" data-tooltip="DND5E.HitDiceConfig">
+                    <a class="config-button" data-action="hitDice" data-tooltip="DND5E.HitDiceConfig">
                         <i class="fas fa-cog"></i>
                     </a>
                     <div class="attribute-value multiple">
@@ -171,7 +171,8 @@
                             {{numberFormat ability.save decimals=0 sign=true}}
                         </span>
                     </div>
-                    <a class="config-button" data-action="ability" data-tooltip="DND5E.AbilityConfigure">
+                    <a class="config-button" data-action="ability"
+                       data-tooltip="{{ localize "DND5E.AbilityConfigure" ability=ability.label }}">
                         <i class="fas fa-cog"></i>
                     </a>
                 </li>
@@ -254,11 +255,11 @@
                         </div>
                     </div>
                     <div class="counter flexrow inspiration">
-                        <h4>{{ localize "DND5E.Inspiration" }}</h4>
-                        <div class="counter-value">
-                            <input type="checkbox" name="system.attributes.inspiration" data-dtype="Boolean"
-                                   {{checked system.attributes.inspiration}}/>
-                        </div>
+                        <label class="flexrow">
+                            <h4>{{ localize "DND5E.Inspiration" }}</h4>
+                            <input type="checkbox" name="system.attributes.inspiration"
+                                   {{checked system.attributes.inspiration}}>
+                        </label>
                     </div>
                 </div>
 
@@ -269,7 +270,7 @@
 
         {{!-- Inventory Tab --}}
         <div class="tab inventory flexcol" data-group="primary" data-tab="inventory">
-            {{> "dnd5e.actor-inventory" sections=inventory}}
+            {{> "dnd5e.inventory" sections=inventory}}
         </div>
 
         {{!-- Features Tab --}}
