--- a/templates/actors/parts/actor-corruption.html
+++ b/templates/actors/parts/actor-corruption.html
@@ -22,7 +22,7 @@
 	</label>
 </div>
 {{/inline}} {{#*inline "corruptionSelection"}}
-<div class="flexrow {{#if corruptionAbilities.thorough}}dnd5e-border{{/if}}" style="border-bottom: solid var(--syb5e-pc-color) 1px; align-items: center">
+<div class="flexrow {{#if corruptionAbilities.thorough}}dnd5e-border{{/if}}" style="border-bottom: solid var(--syb5e-pc-color) 1px; align-items: center;gap:5%;">
 	<h4 class="attribute-name" style="text-align: right; margin: 0">{{ localize "SYB5E.Corruption.Label"}}</h4>
 	<div style="text-align: left">
 		<select name="{{corruptionAbilities.path}}" data-type="String">
